# data-engineering-zoomcamp

./: README.md
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  ingest_data2.py  ingest_data3.py  notebook.ipynb  pyproject.toml
